recorrect home page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,8 +5,7 @@
 
 <div class="container" layout:fragment="content">
     <div class="container my-3">
-        <h1 class="display-3 my-font text-center" th:text="${header}"></h1>
-        <h5 class="display-5 text-center">So glad for trusting us to take care of your money</h5>
+        <h1 class="display-3 my-font text-center" th:text="${greeting}"></h1>
     </div>
 
     <div class="container text-center mt-5">
