atm web with jdbc db connection

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="container text-center mt-5">
-        <a th:href="@{/customer}" class="btn btn-primary">
+        Customer, please<a th:href="@{/customer}" class="btn btn-primary">
             Register
         </a>
     </div>
