--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" th:href="@{/customer}">Customer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/bank_account}">Bank Account</a>
+                    <a class="nav-link" th:href="@{/bankaccount}">Bank Account</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/login}">Login</a>
