--- a/src/main/resources/templates/bankaccount-edit.html
+++ b/src/main/resources/templates/bankaccount-edit.html
@@ -6,9 +6,7 @@
 <div class="container" layout:fragment="content">
     <h1>Edit Bank Account</h1>
     <form
-            th:action="@{/bankaccount/edit/{id}(id=${bankAccount.id})}"
-            th:object="${bankAccount}"
-            method="POST">
+            th:object="${bankAccount}">
 
         <div class="form-group">
             <label for="inputId">Id</label>
@@ -27,11 +25,46 @@
 
         <div class="form-group">
             <label for="inputBalance">Balance</label>
-            <input type="text" th:field="*{balance}" class="form-control" id="inputBalance">
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary">
+            <input disabled type="text" th:field="*{balance}" class="form-control" id="inputBalance">
         </div>
 
     </form>
+
+    <form id="editform" method="POST">
+        <div class="form-group">
+            <label for="inputAmount">Amount</label>
+            <input type="text" th:name="amount" class="form-control" id="inputAmount">
+        </div>
+        <button type="submit" th:onclick="|deposit(${bankAccount.id})|" class="btn btn-danger">Deposit</button>
+        <button type="submit" th:onclick="|withdraw(${bankAccount.id}, ${bankAccount.balance})|" class="btn btn-danger">Withdraw</button>
+    </form>
+
+    <script>
+        function deposit(id) {
+            var form = document.getElementById("editform")
+
+            form.action = "/bankaccount/deposit/" + id
+            form.submit()
+        }
+
+        function withdraw(id, balance) {
+            var amount = document.getElementById("inputAmount");
+            var form = document.getElementById("editform")
+
+
+            if (parseFloat(amount.value) > parseFloat(balance)) {
+                alert("Your balance is not enough!")
+                form.action = "/bankaccount/edit/" + id
+                form.method = "GET"
+            }
+            else {
+                form.action = "/bankaccount/withdraw/" + id
+                form.submit()
+            }
+        }
+
+    </script>
+</div>
+
+
 </div>
