Add test for login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="form-group">
-            <button class="btn btn-primary">Login</button>
+            <button class="btn btn-primary" id="submitButton">Login</button>
         </div>
     </form>
 </div>
